[package]
name = "zebra-chain"
version = "5.0.0"
authors.workspace = true
description = "Core Zcash data structures"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "../README.md"
homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords.workspace = true
# Must be one of <https://crates.io/category_slugs>
categories = ["asynchronous", "cryptography::cryptocurrencies", "encoding"]

[features]
default = []

# Production features that activate extra functionality

# Consensus-critical conversion from JSON to Zcash types
json-conversion = [
    "serde_json",
]

# Async error handling convenience traits
async-error = [
    "tokio",
]

# Experimental internal miner support
internal-miner = ["equihash/solver"]

# Experimental elasticsearch support
elasticsearch = []

# Test-only features

proptest-impl = [
    "proptest",
    "proptest-derive",
    "rand",
    "rand_chacha",
    "tokio/tracing",
    "zebra-test",
]

bench = ["zebra-test"]

tx_v6 = []

[dependencies]

derive-getters = { workspace = true, features = ["auto_copy_getters"] }
lazy_static = { workspace = true }
tempfile = { workspace = true }
bitvec = { workspace = true }
bitflags = { workspace = true }
bitflags-serde-legacy = { workspace = true }
blake2b_simd = { workspace = true }
blake2s_simd = { workspace = true }
bs58 = { workspace = true, features = ["check"] }
byteorder = { workspace = true }

equihash = { workspace = true }

group = { workspace = true }
incrementalmerkletree.workspace = true
jubjub = { workspace = true }
dirs = { workspace = true }
num-integer = { workspace = true }
primitive-types = { workspace = true }
rand_core = { workspace = true }
ripemd = { workspace = true }
# Matches version used by hdwallet
secp256k1 = { workspace = true, features = ["serde"] }
sha2 = { workspace = true, features = ["compress"] }
uint = { workspace = true }
x25519-dalek = { workspace = true, features = ["serde"] }
bech32 = { workspace = true }
zcash_script.workspace = true

# ECC deps
halo2 = { package = "halo2_proofs", version = "0.3" }
orchard.workspace = true
zcash_encoding.workspace = true
zcash_history.workspace = true
zcash_note_encryption = { workspace = true }
zcash_primitives = { workspace = true, features = ["transparent-inputs"] }
sapling-crypto.workspace = true
zcash_protocol.workspace = true
zcash_address.workspace = true
zcash_transparent.workspace = true
sinsemilla = { version = "0.1" }

# Time
chrono = { workspace = true, features = ["clock", "std", "serde"] }
humantime = { workspace = true }

# Error Handling & Formatting
static_assertions = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Serialization
hex = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["serde_derive", "rc"] }
serde_with = { workspace = true }
serde-big-array = { workspace = true }

# Processing
futures = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }

# ZF deps
ed25519-zebra = { workspace = true }
redjubjub = { workspace = true }
reddsa = { workspace = true }

# Production feature json-conversion
serde_json = { workspace = true, optional = true }

# Production feature async-error and testing feature proptest-impl
tokio = { workspace = true, optional = true }

# Optional testing dependencies
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }

zebra-test = { path = "../zebra-test/", version = "2.0.1", optional = true }
bounded-vec = { version = "0.9.0", features = ["serde"] }

[dev-dependencies]
# Benchmarks
criterion = { workspace = true, features = ["html_reports"] }

# Error Handling & Formatting
color-eyre = { workspace = true }
spandoc = { workspace = true }
tracing = { workspace = true }

# Make the optional testing dependencies required
proptest = { workspace = true }
proptest-derive = { workspace = true }

rand = { workspace = true }
rand_chacha = { workspace = true }

tokio = { workspace = true, features = ["full", "tracing", "test-util"] }

zebra-test = { path = "../zebra-test/", version = "2.0.1" }

[[bench]]
name = "block"
harness = false
required-features = ["bench"]

[[bench]]
name = "sapling"
harness = false
required-features = ["bench"]

[[bench]]
name = "redpallas"
harness = false

[lints]
workspace = true
