[package]
name = "zebra-grpc"
version = "0.1.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "Zebra gRPC interface"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

readme = "../README.md"
homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["zebra", "zcash"]
# Must be one of <https://crates.io/category_slugs>
categories = ["cryptography::cryptocurrencies"]

[dependencies]

futures-util = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tower = { workspace = true, features = ["util", "buffer", "timeout"] }
color-eyre = { workspace = true }

zcash_primitives.workspace = true

zebra-node-services = { path = "../zebra-node-services", version = "1.0.0", features = ["shielded-scan"] }
zebra-chain = { path = "../zebra-chain" , version = "1.0.0" }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["redactions", "json", "ron"] }

zebra-chain = { path = "../zebra-chain", features = ["proptest-impl"] }
zebra-state = { path = "../zebra-state" }
zebra-test = { path = "../zebra-test" }

