[package]
name = "zebra-network"
version = "1.0.0-beta.20"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Wait until `arti-client`'s dependency `x25519-dalek v1.2.0` is updated to a higher version. (#5492)
# tor = ["arti-client", "tor-rtcompat"]
proptest-impl = ["proptest", "proptest-derive", "zebra-chain/proptest-impl"]

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
bytes = "1.4.0"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
hex = "0.4.3"
humantime-serde = "1.1.1"
indexmap = { version = "1.9.2", features = ["serde"] }
lazy_static = "1.4.0"
ordered-map = "0.4.2"
pin-project = "1.0.12"
rand = { version = "0.8.5", package = "rand" }
rayon = "1.6.1"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["serde_derive"] }
thiserror = "1.0.38"

futures = "0.3.26"
tokio = { version = "1.25.0", features = ["net", "time", "tracing", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11", features = ["sync", "time"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tower = { version = "0.4.13", features = ["retry", "discover", "load", "load-shed", "timeout", "util", "buffer"] }

metrics = "0.20.1"
tracing-futures = "0.2.5"
tracing-error = { version = "0.2.0", features = ["traced-error"] }
tracing = "0.1.37"

# tor dependencies
# Wait until `arti-client`'s dependency `x25519-dalek v1.2.0` is updated to a higher version. (#5492)
# arti-client = { version = "0.0.2", optional = true }
# tor-rtcompat  = { version = "0.0.2", optional = true }

# proptest dependencies
proptest = { version = "0.10.1", optional = true }
proptest-derive = { version = "0.3.0", optional = true }

zebra-chain = { path = "../zebra-chain" }

[dev-dependencies]
proptest = "0.10.1"
proptest-derive = "0.3.0"

static_assertions = "1.1.0"
tokio = { version = "1.25.0", features = ["full", "tracing", "test-util"] }
toml = "0.7.1"

zebra-chain = { path = "../zebra-chain", features = ["proptest-impl"] }
zebra-test = { path = "../zebra-test/" }
