[package]
name = "zebra-network"
version = "1.0.0-beta.41"
authors = ["Zcash Foundation <zebra@zfnd.org>", "Tower Maintainers <team@tower-rs.com>"]
description = "Networking code for Zebra"
# # Legal
#
# This licence is deliberately different to the rest of Zebra.
#
# Some code in:
# zebra-network/src/peer_set/set.rs
# zebra-network/src/peer_set/unready_service.rs
# zebra-network/src/peer_set/initialize.rs
# was modified from a 2019 version of:
# https://github.com/tower-rs/tower/tree/master/tower/src/balance/p2c/service.rs
license = "MIT"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

readme = "../README.md"
homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["zebra", "zcash"]
# Must be one of <https://crates.io/category_slugs>
categories = ["asynchronous", "cryptography::cryptocurrencies", "encoding", "network-programming"]

[features]
default = []

# Production features that activate extra dependencies, or extra features in dependencies

progress-bar = [
    "howudoin",
]

# Wait until `arti-client`'s dependency `x25519-dalek v1.2.0` is updated to a higher version. (#5492)
# tor = ["arti-client", "tor-rtcompat"]

# Testing features that activate extra dependencies
proptest-impl = ["proptest", "proptest-derive", "zebra-chain/proptest-impl"]

[dependencies]
bitflags = "2.5.0"
byteorder = "1.5.0"
bytes = "1.8.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
dirs = "5.0.1"
hex = "0.4.3"
humantime-serde = "1.1.1"
indexmap = { version = "2.6.0", features = ["serde"] }
itertools = "0.13.0"
lazy_static = "1.4.0"
num-integer = "0.1.46"
ordered-map = "0.4.2"
pin-project = "1.1.6"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.0"
serde = { version = "1.0.211", features = ["serde_derive"] }
tempfile = "3.13.0"
thiserror = "1.0.64"

futures = "0.3.31"
tokio = { version = "1.41.0", features = ["fs", "io-util", "net", "time", "tracing", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.16", features = ["sync", "time"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tower = { version = "0.4.13", features = ["retry", "discover", "load", "load-shed", "timeout", "util", "buffer"] }

metrics = "0.24.0"
tracing-futures = "0.2.5"
tracing-error = { version = "0.2.0", features = ["traced-error"] }
tracing = "0.1.39"

# prod feature progress-bar
howudoin = { version = "0.1.2", optional = true }

# tor dependencies
# Wait until `arti-client`'s dependency `x25519-dalek v1.2.0` is updated to a higher version. (#5492)
# arti-client = { version = "0.0.2", optional = true }
# tor-rtcompat  = { version = "0.0.2", optional = true }

# proptest dependencies
proptest = { version = "1.4.0", optional = true }
proptest-derive = { version = "0.5.0", optional = true }

zebra-chain = { path = "../zebra-chain", version = "1.0.0-beta.41", features = ["async-error"] }

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.5.0"

static_assertions = "1.1.0"
tokio = { version = "1.41.0", features = ["full", "tracing", "test-util"] }
toml = "0.8.19"

zebra-chain = { path = "../zebra-chain", features = ["proptest-impl"] }
zebra-test = { path = "../zebra-test/" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(zcash_unstable, values("nu6"))'] }
