[package]
name = "zebra-node-services"
version = "1.0.0-beta.42"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "The interfaces of some Zebra node services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

readme = "../README.md"
homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["zebra", "zcash"]
# Must be one of <https://crates.io/category_slugs>
categories = ["asynchronous", "cryptography::cryptocurrencies", "network-programming"]

[features]
default = []

# Production features that activate extra dependencies, or extra features in dependencies

# Mining RPC support
getblocktemplate-rpcs = [
    "zebra-chain/getblocktemplate-rpcs",
]

# Tool and test features

rpc-client = [
    "color-eyre",
    "jsonrpc-core",
    "reqwest",
    "serde",
    "serde_json",
]

shielded-scan = []

[dependencies]
zebra-chain = { path = "../zebra-chain" , version = "1.0.0-beta.42" }

# Optional dependencies

# Tool and test feature rpc-client
color-eyre = { version = "0.6.3", optional = true }
jsonrpc-core = { version = "18.0.0", optional = true }
# Security: avoid default dependency on openssl
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"], optional = true }
serde = { version = "1.0.215", optional = true }
serde_json = { version = "1.0.133", optional = true }
tokio = { version = "1.41.1", features = ["time", "sync"] }

[dev-dependencies]

color-eyre = "0.6.3"
jsonrpc-core = "18.0.0"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
serde = "1.0.215"
serde_json = "1.0.133"
