[package]
name = "zebra-node-services"
version = "1.0.1"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "The interfaces of some Zebra node services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

readme = "../README.md"
homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["zebra", "zcash"]
# Must be one of <https://crates.io/category_slugs>
categories = ["asynchronous", "cryptography::cryptocurrencies", "network-programming"]

[features]
default = []

# Production features that activate extra dependencies, or extra features in dependencies

# Tool and test features

rpc-client = [
    "color-eyre",
    "jsonrpsee-types",
    "reqwest",
    "serde",
    "serde_json",
]

[dependencies]
zebra-chain = { path = "../zebra-chain" , version = "2.0.0" }
tower = { workspace = true }

# Optional dependencies

# Tool and test feature rpc-client
color-eyre = { workspace = true, optional = true }
jsonrpsee-types = { workspace = true, optional = true }
# Security: avoid default dependency on openssl
reqwest = { workspace = true, features = ["rustls-tls"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["time", "sync"] }

[dev-dependencies]

color-eyre = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpsee-types = { workspace = true }

[lints]
workspace = true
