[package]
name = "zebra-rpc"
version = "5.0.0"
authors.workspace = true
description = "A Zebra JSON Remote Procedure Call (JSON-RPC) interface"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "../README.md"
homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords.workspace = true
# Must be one of <https://crates.io/category_slugs>
categories = [
    "asynchronous",
    "cryptography::cryptocurrencies",
    "encoding",
    "network-programming",
]

# Exclude proto files so crates.io consumers don't need protoc.
exclude = ["*.proto"]

[features]
tx_v6 = ["zebra-chain/tx_v6", "zebra-state/tx_v6", "zebra-consensus/tx_v6"]

# Production features that activate extra dependencies, or extra features in
# dependencies

# Experimental internal miner support
internal-miner = []

# Test-only features
proptest-impl = [
    "proptest",
    "zebra-consensus/proptest-impl",
    "zebra-state/proptest-impl",
    "zebra-network/proptest-impl",
    "zebra-chain/proptest-impl",
]


[dependencies]
chrono = { workspace = true, features = ["clock", "std"] }
futures = { workspace = true }

jsonrpsee = { workspace = true, features = ["server"] }
jsonrpsee-types = { workspace = true }
jsonrpsee-proc-macros = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
serde_with = { workspace = true, features = ["hex"] }
indexmap = { workspace = true, features = ["serde"] }
derive-getters = { workspace = true, features = ["auto_copy_getters"] }
derive-new = { workspace = true }

# RPC endpoint basic auth
base64 = { workspace = true }
rand = { workspace = true }

# Error handling
color-eyre = { workspace = true }

tokio = { workspace = true, features = ["time", "rt-multi-thread", "macros", "tracing"] }
tower = { workspace = true }

# gRPC server dependencies
tonic = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
tokio-stream = { workspace = true }

tracing = { workspace = true }

# Metrics collection
metrics = { workspace = true }

hex = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["serde_derive"] }

# For the `stop` RPC method.
nix = { workspace = true, features = ["signal"] }

# For openrpc
openrpsee = "0.1.0"
phf = { workspace = true, features = ["macros"] }
schemars = { workspace = true }

zcash_address = { workspace = true }
zcash_keys = { workspace = true }
zcash_primitives = { workspace = true, features = ["transparent-inputs"] }
zcash_protocol = { workspace = true }
zcash_script = { workspace = true }
zcash_transparent = { workspace = true }

sapling-crypto = { workspace = true }

# Test-only feature proptest-impl
proptest = { workspace = true, optional = true }

zebra-chain = { path = "../zebra-chain", version = "5.0.0", features = [
    "json-conversion",
] }
zebra-consensus = { path = "../zebra-consensus", version = "4.0.0" }
zebra-network = { path = "../zebra-network", version = "4.0.0" }
zebra-node-services = { path = "../zebra-node-services", version = "3.0.0", features = [
    "rpc-client",
] }
zebra-script = { path = "../zebra-script", version = "4.0.0" }
zebra-state = { path = "../zebra-state", version = "4.0.0" }

[build-dependencies]
openrpsee = "0.1.0"
tonic-prost-build = { workspace = true }
which = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["redactions", "json", "ron"] }

proptest = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }

zebra-chain = { path = "../zebra-chain", version = "5.0.0", features = [
    "proptest-impl",
] }
zebra-consensus = { path = "../zebra-consensus", version = "4.0.0", features = [
    "proptest-impl",
] }
zebra-network = { path = "../zebra-network", version = "4.0.0", features = [
    "proptest-impl",
] }
zebra-state = { path = "../zebra-state", version = "4.0.0", features = [
    "proptest-impl",
] }

zebra-test = { path = "../zebra-test", version = "2.0.1" }

[lints]
workspace = true
